@startuml Models

namespace ReminderListView.View #FFFFEC {
    class ReminderListView <<UIView>>
    class NoReminderView <<UIView>>
    ReminderListView -[hidden]-> NoReminderView
}
namespace ReminderListView.Controller #FFFFEC {
    class ReminderListViewController <<UIViewController>>
    class NotificationHandlerProtocol <<P, #ffccee)>>
    class NotificationHandler <<S, #ffeecc)>>
    ReminderListViewController o-- Model.ReminderListProtocol
    ReminderListViewController *- ReminderListView.View.ReminderListView
    ReminderListViewController *- ReminderListView.View.NoReminderView
    ReminderListViewController o-- NotificationHandlerProtocol
    ReminderListViewController o-- Model.NotificationDateCalculator
    ReminderListViewController o-- Util.DateProviderProtocol
    ReminderListViewController o-- Model.OldReminderRemoverProtocol
    ReminderListViewController -u-> ReminderEditView.Controller.ReminderEditViewController: 画面遷移
    NotificationHandler ..|> NotificationHandlerProtocol
    NotificationHandler -l[hidden]- ReminderListViewController
}

' 依存先
namespace Util #ECEFF4 {
    class DateProviderProtocol <<P, #ffccee)>>
}
namespace Model #ECEFF4 {
    class NotificationDateCalculator <<S, #ffeecc)>> #FFE5FF
    class ReminderListProtocol <<P, #ffccee)>>
    class OldReminderRemoverProtocol <<P, #ffccee)>>
    NotificationDateCalculator -u[hidden]- ReminderListView.Controller.NotificationHandlerProtocol
}
namespace ReminderEditView.Controller #E9FFFF {
    class ReminderEditViewController <<UIViewController>>
}
